[tool.poetry]
name = "huma-utils"
version = "0.1.0"
description = ""
authors = ["flowers-huang <flora221@stanford.edu>"]
readme = "README.md"
packages = [{include = "huma_utils"}]

[tool.poetry.dependencies]
python = "~3.10"
httpx = "^0.24.1"
orjson = "^3.9.1"
pydantic = "^1.10.9"
web3 = "^6.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-describe = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
